--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,9 @@
     <quarkus.platform.version>2.16.7.Final</quarkus.platform.version>
     <skipITs>true</skipITs>
     <surefire-plugin.version>3.0.0-M7</surefire-plugin.version>
+    <kogito.bom.group-id>com.ibm.bamoe</kogito.bom.group-id>
+    <kogito.bom.artifact-id>bamoe-bom</kogito.bom.artifact-id>
+    <kogito.bom.version>9.0.0.Final</kogito.bom.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -26,9 +29,9 @@
         <scope>import</scope>
       </dependency>
       <dependency>
-        <groupId>${quarkus.platform.group-id}</groupId>
-        <artifactId>quarkus-kogito-bom</artifactId>
-        <version>${quarkus.platform.version}</version>
+        <groupId>${kogito.bom.group-id}</groupId>
+        <artifactId>${kogito.bom.artifact-id}</artifactId>
+        <version>${kogito.bom.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -72,6 +75,10 @@
       <groupId>io.rest-assured</groupId>
       <artifactId>rest-assured</artifactId>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.ibm.bamoe</groupId>
+      <artifactId>bamoe-ilmt-compliance-quarkus-pamoe</artifactId>
     </dependency>
   </dependencies>
   <build>
